[gd_scene load_steps=10 format=3 uid="uid://dxqlxf77b1obk"]

[ext_resource type="Script" path="res://Scenes/code_yellow_boss.gd" id="1_a3cq8"]
[ext_resource type="PackedScene" uid="uid://bw4lnil0db42v" path="res://Scenes/status_effects_bar.tscn" id="1_sbv1b"]
[ext_resource type="Shader" path="res://Shaders/flash.gdshader" id="2_dsxpg"]
[ext_resource type="Texture2D" uid="uid://bwnsgaactu1hj" path="res://Images/Characters/code_yellow.png" id="2_scbim"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j1vj0"]
shader = ExtResource("2_dsxpg")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbllp"]
size = Vector2(40, 66)

[sub_resource type="Animation" id="Animation_xa7pd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y2a36"]
resource_name = "default"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_of2wr"]
_data = {
"RESET": SubResource("Animation_xa7pd"),
"default": SubResource("Animation_y2a36")
}

[node name="CodeYellowBoss" type="Area2D"]
rotation = 3.14159
collision_layer = 2
collision_mask = 4
script = ExtResource("1_a3cq8")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_j1vj0")
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_scbim")
hframes = 2

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lbllp")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_of2wr")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="PassiveTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="AfterImageTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="hp" type="Label" parent="."]
offset_left = 19.0
offset_top = -33.9999
offset_right = 59.0
offset_bottom = -17.9999
rotation = 3.14159
text = "hp"
horizontal_alignment = 1

[node name="StatusEffectsBar" parent="." instance=ExtResource("1_sbv1b")]
offset_left = 14.9999
offset_top = -49.9999
offset_right = 44.9999
offset_bottom = -19.9999
rotation = 3.14159

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="PassiveTimer" to="." method="_on_passive_timer_timeout"]
[connection signal="timeout" from="AfterImageTimer" to="." method="_on_after_image_timer_timeout"]
